ejercicio tecnico paula tormo

--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "ca746d5c",
    "metadata": {},
    "outputs": [],
@@ -31,24 +31,57 @@
     "    def ver_inventario(self, producto):\n",
     "\n",
     "        for producto in self.inventario:\n",
-    "            print(f\"Nombre: {producto[\"nombre\"]}, Precio: ${producto[\"precio\"]}, Cantidad {producto[\"cantidad\"]}\")\n",
+    "            print(f\"Nombre: {producto['nombre']}, Precio: ${producto['precio']}, Cantidad {producto['cantidad']}\")\n",
     "             #para al terminar de contar el inventario\n",
     "    \n",
     "    def buscar_producto(self, nombre):\n",
     "        for producto in self.inventario:\n",
     "            if nombre == producto[\"nombre\"]:\n",
-    "                  print(f\"Producto: {producto[\"nombre\"]}, Precio ${producto[\"precio\"]}, Producto {producto[\"cantidad\"]}\") \n",
+    "                  print(f\"Producto: {producto['nombre']}, Precio ${producto['precio']}, Producto {producto['cantidad']}\") \n",
     "                  return # para que vuelva si lo encuentra en el inventario\n",
     "\n",
     "        print(f\"El producto {nombre} no aparece en el inventario. Pruebe con otro.\") #mejor con nombre para que esté más claro el mensaje\n",
     "    \n",
+    "    def actualizar_stock(self, nombre, cantidad):\n",
+    "        \"\"\"Actulización de la cantidad de stock de los productos del inventario. Los número positivos suman y los negativos, restan stock.\"\"\"\n",
     "        \n",
-    "       "
+    "        nueva_cantidad = int(input(\"Introduce una cantidad para cambiar el stock del inventario.\"))\n",
+    "\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre: \n",
+    "                if nueva_cantidad > 0:\n",
+    "                    producto['cantidad'] += nueva_cantidad \n",
+    "                    print(f\"La cantidad añadida ha sido de {nueva_cantidad} más, actualmente hay {producto['cantidad']} en el inventario.\")\n",
+    "\n",
+    "                elif nueva_cantidad < 0:\n",
+    "                    if producto['cantidad'] >= 0:\n",
+    "                        producto['cantidad'] -= cantidad\n",
+    "                        print(f\"La cantidad añadida ha sido de {nueva_cantidad} menos, actualmente hay {cantidad['cantidad']} en el inventario.\")\n",
+    "                    else:\n",
+    "                        print(\"No hay suficiente stock para restarlo al stock actual. Pruebe con una cantidad menor.\")\n",
+    "        \n",
+    "            break\n",
+    "            \n",
+    "        else:\n",
+    "            print(\"Este producto no existe en el inventario. Pruebe con otro producto.\")   \n",
+    "\n",
+    "    def eliminar_producto(self, nombre):\n",
+    "        nombre = input(\"Introduce el producto a eliminar del inventario.\").lower()\n",
+    "        for producto in self.inventario:\n",
+    "            if producto['nombre'] == nombre:\n",
+    "                self.inventario.remove(producto)\n",
+    "                print(f\"El producto {producto['nombre']} ha sido eliminado. El inventario se ha actualizado.\")\n",
+    "\n",
+    "                break #si lo encuentra, se sale\n",
+    "        else:\n",
+    "            print(\"No aparece en el inventario\") \n",
+    "    \n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 54,
    "id": "fb71261e",
    "metadata": {},
    "outputs": [],
@@ -58,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 55,
    "id": "5808677b",
    "metadata": {},
    "outputs": [
@@ -77,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 56,
    "id": "02545722",
    "metadata": {},
    "outputs": [
@@ -95,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 57,
    "id": "8f60ce8e",
    "metadata": {},
    "outputs": [
@@ -114,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 58,
    "id": "f60705b8",
    "metadata": {},
    "outputs": [
@@ -133,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 59,
    "id": "81e7120d",
    "metadata": {},
    "outputs": [
@@ -152,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 60,
    "id": "0fa1f1a1",
    "metadata": {},
    "outputs": [
@@ -166,7 +199,7 @@
        " 'ventas_totales': 0}"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 61,
    "id": "5f1dfef3",
    "metadata": {},
    "outputs": [
@@ -198,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 62,
    "id": "890d91b5",
    "metadata": {},
    "outputs": [
@@ -216,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 63,
    "id": "a4df8cee",
    "metadata": {},
    "outputs": [
@@ -230,6 +263,94 @@
    ],
    "source": [
     "tienda.buscar_producto(\"tecla\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "92522f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad añadida ha sido de 2 más, actualmente hay 10 en el inventario.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.actualizar_stock(\"ordenador\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "75687036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tienda.actualizar_stock(\"raton\", -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "c559750b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto ordenador ha sido eliminado. El inventario se ha actualizado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.eliminar_producto(\"ordenador\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4c1d2df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No aparece en el inventario\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.eliminar_producto(\"perro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "135e1105",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'impresora', 'precio': 40, 'cantidad': 2},\n",
+       "  {'nombre': 'raton', 'precio': 15.5, 'cantidad': 3},\n",
+       "  {'nombre': 'teclado', 'precio': 150, 'cantidad': 20}],\n",
+       " 'ventas_totales': 0}"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda.__dict__"
    ]
   }
  ],
