ejercicio tecnico paula tormo

--- a/ejerciciotecnico._paulatormoa.ipynb
+++ b/ejerciciotecnico._paulatormoa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "id": "ca746d5c",
    "metadata": {},
    "outputs": [],
@@ -96,13 +96,13 @@
     "    def calcular_valor_inventario(self):\n",
     "\n",
     "        \"\"\"Esta función nos calcula y muestra el valor total de nuestro inventario.\"\"\"\n",
-    "\n",
+    "        valor_total_inventario = 0 #inicia en 0 y luego va añadiendo nuestras respectivas multiplicaciones\n",
     "        for producto in self.inventario:\n",
     "            valor = producto['precio'] * producto['cantidad']\n",
-    "            print(valor)\n",
-    "            self.ventas_totales += valor\n",
+    "            \n",
+    "            valor_total_inventario += valor\n",
     "\n",
-    "            print(f\"El valor total del inventario es {self.ventas_totales}\")\n",
+    "        print(f\"El valor total del inventario es {valor_total_inventario}.\") #de esta manera suma el total\n",
     "\n",
     "    \n",
     "    \n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 188,
    "id": "fb71261e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 189,
    "id": "5808677b",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 190,
    "id": "02545722",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 191,
    "id": "8f60ce8e",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 192,
    "id": "f60705b8",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 193,
    "id": "81e7120d",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 194,
    "id": "0fa1f1a1",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        " 'ventas_totales': 0}"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 195,
    "id": "5f1dfef3",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 196,
    "id": "890d91b5",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 197,
    "id": "a4df8cee",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 198,
    "id": "92522f1d",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 199,
    "id": "75687036",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 206,
+   "id": "34e23f19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La cantidad añadida ha sido de 2 más, actualmente hay 4 en el inventario.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tecnologiatenda.actualizar_stock(\"Raton\", 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
    "id": "c559750b",
    "metadata": {},
    "outputs": [
@@ -341,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto ordenador ha sido eliminado. El inventario se ha actualizado.\n"
+      "No aparece en el inventario.\n"
      ]
     }
    ],
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 208,
    "id": "4c1d2df0",
    "metadata": {},
    "outputs": [
@@ -369,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 209,
    "id": "135e1105",
    "metadata": {},
    "outputs": [
@@ -377,12 +395,12 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'impresora', 'precio': 40, 'cantidad': 2},\n",
-       "  {'nombre': 'raton', 'precio': 15.5, 'cantidad': 2},\n",
+       "  {'nombre': 'raton', 'precio': 15.5, 'cantidad': 4},\n",
        "  {'nombre': 'teclado', 'precio': 150, 'cantidad': 20}],\n",
        " 'ventas_totales': 0}"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,20 +411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 210,
    "id": "564dcfd3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[164], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tecnologiatenda\u001b[38;5;241m.\u001b[39mcalcular_valor_inventario()\n",
-      "Cell \u001b[1;32mIn[144], line 95\u001b[0m, in \u001b[0;36mTiendaOnline.calcular_valor_inventario\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m producto \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario:\n\u001b[0;32m     94\u001b[0m         valor \u001b[38;5;241m=\u001b[39m producto[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprecio\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m producto[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcantidad\u001b[39m\u001b[38;5;124m'\u001b[39m] \n\u001b[1;32m---> 95\u001b[0m         valor_total \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(valor \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minventario))\n\u001b[0;32m     96\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEl valor total del inventario es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalor_total\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del inventario es 80.\n",
+      "El valor total del inventario es 142.0.\n",
+      "El valor total del inventario es 3142.0.\n"
      ]
     }
    ],
